Fixed dark mode.

--- a/j-Modal/component.css
+++ b/j-Modal/component.css
@@ -2,7 +2,7 @@
 .ui-modal-container { background-color: rgba(240,240,240,0.8); position: fixed; left: 0; right: 0; top: 0; bottom: 0; }
 .ui-modal { background-color: white; margin: 0 auto; border-radius: 3px; box-shadow: 0 0 30px rgba(0,0,0,0.05); transform: scale(0); transition: transform 0.2s; position: absolute; left: 50%; overflow: hidden; border: 1px solid #E0E0E0; }
 .ui-modal-visible .ui-modal { transform: scale(1); }
-.ui-modal-body-area { overflow-x: hidden; overflow-y: scroll; overflow-scrolling: touch; width: 100%; }
+.ui-modal-body-area { overflow-x: hidden; overflow-y: auto; overflow-scrolling: touch; width: 100%; }
 .ui-modal-body { margin-right: 30px; }
 .ui-modal-header { border-bottom: 1px solid #E0E0E0; height: 50px; padding: 0 0 0 15px; }
 .ui-modal-icon { float: left; height: 50px; line-height: 50px; margin-right: 7px; }
@@ -21,7 +21,7 @@
 .ui-modal-align-3 { left: 25px; top: 25px; }
 .ui-modal-align-4 { left: auto; right: 25px; top: 25px; }
 
-.ui-dark .ui-modal { background-color: #202020; }
+.ui-dark .ui-modal { background-color: #202020; border-color: #404040; }
 .ui-dark .ui-modal-container { background-color: rgba(100,100,100,0.1); position: fixed; left: 0; right: 0; top: 0; bottom: 0; }
 .ui-dark .ui-modal-footer { border-top-color: #303030; }
 .ui-dark .ui-modal-header { border-bottom-color: #303030; }
